tests/baselines/reference/FunctionDeclaration10_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration10_es6.ts(1,16): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration10_es6.ts(1,26): error TS1005: ',' expected.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration10_es6.ts(1,29): error TS1138: Parameter declaration expected.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration10_es6.ts(1,29): error TS2304: Cannot find name 'yield'.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration10_es6.ts(1,34): error TS1005: ';' expected.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration10_es6.ts (5 errors) ====
    function * foo(a = yield => yield) {
                   ~~~~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
                             ~~
!!! error TS1005: ',' expected.
                                ~~~~~
!!! error TS1138: Parameter declaration expected.
                                ~~~~~
!!! error TS2304: Cannot find name 'yield'.
                                     ~
!!! error TS1005: ';' expected.
    }